--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,10 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+# MATLAB autosave files
+*.asv
+
+# data directory
+data/
+Meetings/
